Change Projects order & fix Top Button z-index

--- a/css/style.css
+++ b/css/style.css
@@ -1031,6 +1031,7 @@ nav {
   right: 20px;
   cursor: pointer;
   transform: scale(0);
+  z-index: 1;
   transition: all 0.3s ease-in-out;
 }
 
